--- a/pos/src/main/resources/application.properties
+++ b/pos/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
@@ -22,3 +23,24 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# Configuracion de Swagger para la documentacion de las APIS
+springdoc.api-docs.path=/doc
+springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.org.springdoc=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# Configuracion de Multipart para la carga de imagenes
+
+# Tamaño máximo de archivo permitido (por defecto es 1MB)
+spring.servlet.multipart.max-file-size=2MB
+
+# Tamaño máximo de la solicitud multipart (por defecto es 10MB)
+spring.servlet.multipart.max-request-size=10MB
+
+# Habilitar o deshabilitar el soporte multipart (por defecto es true)
+spring.servlet.multipart.enabled=true
+
+# Ubicación temporal para almacenar archivos cargados
+spring.servlet.multipart.location=/tmp
