--- a/pos/pom.xml
+++ b/pos/pom.xml
@@ -37,6 +37,13 @@
 		</dependency>
 
 		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+   			<version>2.5.0</version> <!-- Esta dependencia integra swagger y Swagger/OpenAPI-->
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
@@ -61,6 +68,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.2.0</version> <!-- Usa la última versión disponible -->
 		</dependency>
 
 		<dependency>
@@ -101,6 +119,7 @@
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.3.9</version>
 		</dependency>
 
 		<dependency>
@@ -112,6 +131,12 @@
     		<groupId>org.thymeleaf.extras</groupId>
     		<artifactId>thymeleaf-extras-springsecurity6</artifactId>
     		<version>3.1.2.RELEASE</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-boot-starter</artifactId>
+   		 	<version>3.0.0</version>
 		</dependency>
 
     </dependencies>
