--- a/pos/src/main/resources/application.properties
+++ b/pos/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.port =8088
 spring.datasource.url=jdbc:mysql://localhost:3306/rollerdb
 spring.datasource.username=user_test
 spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Conspring.swagger2.enabled=truefiguración de JPA
 spring.jpa.database=mysql
@@ -30,6 +31,21 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.com.rollerspeed=TRACE
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.csrf=TRACE
+
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-exception=true
+server.error.include-stacktrace=always
+
 
 # Configuracion de Multipart para la carga de imagenes
 
